<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/masterDataBackground"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
	android:background="@drawable/backgroundcolor"
>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="45dip"
		android:orientation="horizontal"
		android:background="@color/top_background"
		android:gravity="left"
	>

		<ImageButton
	    	android:id="@+id/homeTopMasterData"
	    	android:layout_width="45dip" 
	    	android:layout_height="fill_parent"	
	    	android:src="@drawable/topbarhomebutton"
	    	android:background="@drawable/topbuttonbackground"
	    	android:onClick="onClickTopHome"
	    />
	    <ImageView style="@style/TitleBarSeparator" />

	 	<TextView
			android:text="@string/masterdata_title"
	    	android:textColor="@color/top_text"
	    	android:textSize="18sp"	    	
	    	android:textStyle="bold"	    	
	 		android:layout_width="0dp"
	 		android:layout_weight="1" 
	 		android:layout_height="fill_parent" 
	 		android:layout_gravity="center" 
	 		android:gravity="center_vertical"
	 		android:paddingLeft="12dip"
	 		android:paddingRight="12dip"
	 		android:singleLine="true"
			android:ellipsize="end"
        />
        
	    <ImageView style="@style/TitleBarSeparator" />
	    <ImageButton
	   	 	android:id="@+id/addTopMasterData"
	    	android:layout_width="45dip" 
	    	android:layout_height="fill_parent"	    	
	    	android:background="@drawable/topbuttonbackground"
	    	android:src="@drawable/topbaraddbutton"
	    	android:onClick="onClickTopAdd"
			/>
	        
	</LinearLayout>
		
	<TableLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:stretchColumns="2"	
	>
	
		<TableRow>
        	<TextView
            	android:layout_column="1"
            	android:text="@string/masterdata_licno"
            	android:padding="3dip"
				android:textColor="@color/text"
            	android:textSize="16sp" 
            />
        	<TextView
            	android:id="@+id/masterdatalicenseno"
            	android:gravity="left"
            	android:padding="3dip"
				android:textColor="@color/text"
            	android:textSize="16sp" 
            />
    	</TableRow>
    	
    	<TableRow>
        	<TextView android:layout_column="1" android:text="@string/masterdata_description" android:padding="3dip" android:textColor="@color/text" android:textSize="16sp" />
        	<TextView android:id="@+id/masterdatadescription" android:gravity="left" android:padding="3dip" android:textColor="@color/text" android:textSize="16sp" />
    	</TableRow>
    	
    	<TableRow android:visibility="gone">
        	<TextView
            	android:layout_column="1"
            	android:text="@string/masterdata_manufact"
            	android:padding="3dip"
				android:textColor="@color/text"
            	android:textSize="16sp" 
            />
        	<TextView
            	android:id="@+id/masterdatamanufact"
            	android:gravity="left"
            	android:padding="3dip"
				android:textColor="@color/text"
            	android:textSize="16sp" 
            />
    	</TableRow>
    	
    	<TableRow android:visibility="gone"> 
        	<TextView
            	android:layout_column="1"
            	android:text="@string/masterdata_modelname"
            	android:padding="3dip"
				android:textColor="@color/text"
            	android:textSize="16sp" 
            />
        	<TextView
            	android:id="@+id/masterdatamodel"
            	android:gravity="left"
            	android:padding="3dip"
				android:textColor="@color/text"
            	android:textSize="16sp" 
            />
    	</TableRow>
    	
    	<TableRow>
        	<TextView
            	android:layout_column="1"
            	android:text="@string/masterdata_construction"
            	android:padding="3dip"
				android:textColor="@color/text"
            	android:textSize="16sp" 
            />
        	<TextView
            	android:id="@+id/masterdataconstruction"
            	android:gravity="left"
            	android:padding="3dip"
				android:textColor="@color/text"
            	android:textSize="16sp" 
            />
    	</TableRow>
    	
    	<TableRow>
        	<TextView
            	android:layout_column="1"
            	android:text="@string/masterdata_fueltype"
            	android:padding="3dip"
				android:textColor="@color/text"
            	android:textSize="16sp" 
            />
        	<TextView
            	android:id="@+id/masterdatafueltype"
            	android:gravity="left"
            	android:padding="3dip"
				android:textColor="@color/text"
            	android:textSize="16sp" 
            />
    	</TableRow>
    	
    	<TableRow>
        	<TextView
            	android:layout_column="1"
            	android:text="@string/masterdata_contracttype"
            	android:padding="3dip"
				android:textColor="@color/text"
            	android:textSize="16sp" 
            />
        	<TextView
            	android:id="@+id/masterdatacontract"
            	android:gravity="left"
            	android:padding="3dip"
				android:textColor="@color/text"
            	android:textSize="16sp" 
            />
        </TableRow>
    	
    	
    	
		<TableRow>
        	<TextView
            	android:layout_column="1"
            	android:text="@string/masterdata_entryDate"
            	android:padding="3dip"
				android:textColor="@color/text"
            	android:textSize="16sp" 
            />
        	<TextView
            	android:id="@+id/masterdataentrydate"
            	android:gravity="left"
            	android:padding="3dip"
				android:textColor="@color/text"
            	android:textSize="16sp" 
            />
    	</TableRow>
    	
		<TableRow>
        	<TextView
            	android:layout_column="1"
            	android:text="@string/masterdata_terminationDate"
            	android:padding="3dip"
				android:textColor="@color/text"
            	android:textSize="16sp" 
            />
        	<TextView
            	android:id="@+id/masterdataterminationdate"
            	android:gravity="left"
            	android:padding="3dip"
				android:textColor="@color/text"
            	android:textSize="16sp" 
            	android:maxLines="5"
            />
    	</TableRow>
    	
	</TableLayout>
	
	<LinearLayout	
		android:id="@+id/masterdataChangeDefaultCarLayout"	
		android:layout_width="fill_parent"
		android:layout_height="50dip"
		android:layout_gravity="bottom"
		android:gravity="center|bottom"
		android:orientation="horizontal"
		android:background="@color/bottom_background"
		android:visibility="invisible"
	>

		<Button
		android:id="@+id/masterdataChangeDefaultCar"
		android:gravity="center"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:textColor="@color/text"
		android:text="@string/masterdata_changeCarButton"
		android:onClick="onClickChangeCar"
		/>

	</LinearLayout>
	

	
</LinearLayout>