<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    
	android:id="@+id/dashboardBackground"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/backgroundcolor"
>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="45dip"
		android:orientation="horizontal"
		android:background="@color/top_background"
		android:gravity="right"
	>
		<ImageView
			android:layout_width="wrap_content"
	 		android:layout_height="fill_parent"
	 		android:src="@drawable/icon"
	 		 />
	 	<TextView
			android:text="Fleetmanager"
	    	android:textColor="@color/top_text"
	    	android:textSize="18sp"	    	
	    	android:textStyle="bold"	    	
	 		android:layout_width="0dp"
	 		android:layout_weight="1" 
	 		android:layout_height="fill_parent" 
	 		android:layout_gravity="center" 
	 		android:gravity="center_vertical"
	 		android:paddingLeft="12dip"
	 		android:paddingRight="12dip"
	 		android:singleLine="true"
			android:ellipsize="end"
	 	/>
	 	<!--    
	    <ImageView
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_gravity="left"
	    	android:layout_marginRight="88sp"
	    	android:src="@drawable/logo"	    	
	    />
	     -->
	    <ImageView style="@style/TitleBarSeparator" />
	    <ImageButton
	   	 	android:id="@+id/syncTopDashBoard"
	    	android:layout_width="45dip" 
	    	android:layout_height="fill_parent"	    	
	    	android:background="@drawable/topbuttonbackground"
	    	android:src="@drawable/topbarsyncbutton"
	    	android:onClick="onClickTopSync"
			/>
		<ProgressBar style="@style/TitleBarProgressIndicator"
            android:id="@+id/syncTopDashBoardProgress"
            android:visibility="gone" />
		<ImageView 
			style="@style/TitleBarSeparator" 
			android:visibility="gone"/>
	    <ImageButton
	   	 	android:id="@+id/searchTopDashBoard"
	    	android:layout_width="45dip" 
	    	android:layout_height="fill_parent"	    	
	    	android:background="@drawable/topbuttonbackground"
	    	android:src="@drawable/topbarsearchbutton"
	    	android:visibility="gone"
	    	android:onClick="onClickTopSearch"
			/>
	</LinearLayout>
	
	
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:orientation="horizontal"
	>
	
		<Button
			android:id="@+id/newBookingButton" 
			android:layout_width="fill_parent"
			android:layout_height="120dp"
			android:layout_weight="1"
			android:layout_gravity="center_horizontal"								
			android:gravity="center_horizontal"
			android:paddingTop="25dp"
			android:paddingBottom="25dp"			
			android:text="@string/dashboard_newbookingbutton"
			android:textColor="@color/text"
			android:textStyle="bold"
			android:drawableTop="@drawable/add"
			android:background="@drawable/dashboardbutton"		
			android:onClick="onClickNewBooking"	
		/>
		
		<ImageView
			android:layout_width="fill_parent"
			android:layout_height="120sp"
			android:layout_weight="1"
			android:layout_gravity="center_horizontal"			
			android:gravity="center_horizontal"
			android:src="@drawable/arconsislogo"
			android:paddingTop="4sp"
		/>
	
	</LinearLayout>
	
	<LinearLayout		
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:orientation="horizontal"
	>
	
		<Button
			android:id="@+id/allBookingsButton"
			android:layout_width="fill_parent"
			android:layout_height="120dp"
			android:layout_weight="1"
			android:layout_gravity="center_horizontal"			
			android:gravity="center_horizontal"
			android:paddingTop="25dp"
			android:paddingBottom="25dp" 			
			android:text="@string/dashboard_allbookingsbutton"
			android:textColor="@color/text"
			android:textStyle="bold"
			android:background="@drawable/dashboardbutton"
			android:drawableTop="@drawable/database"
			android:onClick="onClickAllBookings"			
		/>
		
		<Button
			android:id="@+id/allDocumentsButton"
			android:layout_width="fill_parent"
			android:layout_height="120dp"
			android:layout_weight="1"
			android:layout_gravity="center_horizontal"
			android:paddingTop="25dp"
			android:paddingBottom="25dp"			
			android:gravity="center_horizontal"			 			
			android:text="@string/dashboard_alldocumentsbutton"
			android:textColor="@color/text"
			android:textStyle="bold"
			android:background="@drawable/dashboardbutton"
			android:drawableTop="@drawable/categories"			
			android:onClick="onClickAllDocuments"
		/>
	
	</LinearLayout>	
	
	<LinearLayout
		android:id="@+id/changeCarLayout"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:orientation="horizontal"
		android:onClick="onClickCar"
	>
	
		<ImageView
			android:id="@+id/car_image"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
			android:layout_marginRight="8dp"
			android:layout_marginLeft="5dp"
			android:gravity="center_vertical"
			android:src="@drawable/car"
		/>
			
		<TextView
			android:id="@+id/currentCarText"  
	    	android:layout_width="fill_parent" 
	    	android:layout_height="wrap_content"
	    	android:layout_gravity="center_vertical"
	    	android:gravity="center_vertical"
	    	android:textSize="20dp" 
	    	android:textColor="@color/text"
	    	android:textStyle="bold"
		/>
	
	</LinearLayout>
	

	<LinearLayout
		android:id="@+id/changeUserLayout"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:orientation="horizontal"
		android:onClick="onClickUser"
	>
	
		<ImageView
			android:id="@+id/user_image"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"			
			android:layout_gravity="center_vertical"
			android:layout_marginRight="8dp"
			android:layout_marginLeft="5dp"
			android:gravity="center_vertical"			
			android:src="@drawable/user"
		/>
			
		<TextView
			android:id="@+id/currentUserText"  
	    	android:layout_width="fill_parent" 
	    	android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
			android:gravity="center_vertical"
	    	android:textSize="20dp"
	    	android:textColor="@color/text"
	    	android:textStyle="bold"
		/>	
	
	</LinearLayout>
	
</LinearLayout>
